Creamos todo el CSS necesario para más adelante lograr el efecto que queremos ya que vamos a utilizar Javascript

--- a/index.html
+++ b/index.html
@@ -7,11 +7,43 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<section class="uno">
-		<p>Sección Uno</p>
-	</section>
-	<section class="dos">
-		<p>Sección Dos</p>
-	</section>
+	<h1>Efecto Parallax</h1>
+
+	<div class="page">
+		<p>
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam tenetur deserunt, sunt sit, ducimus tempore laudantium nostrum magnam et obcaecati, aperiam inventore hic itaque dicta quasi consectetur. Quo nulla, porro. <br>
+
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam tenetur deserunt, sunt sit, ducimus tempore laudantium nostrum magnam et obcaecati, aperiam inventore hic itaque dicta quasi consectetur. Quo nulla, porro. Lorem ipsum dolor sit amet.
+		</p>
+
+		<p>
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam tenetur deserunt, sunt sit, ducimus tempore laudantium nostrum magnam et obcaecati, aperiam inventore hic itaque dicta quasi consectetur. Quo nulla, porro. <br>
+
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam tenetur deserunt, sunt sit, ducimus tempore laudantium nostrum magnam et obcaecati, aperiam inventore hic itaque dicta quasi consectetur. Quo nulla, porro. Lorem ipsum dolor sit amet.
+		</p>
+
+		<p>
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam tenetur deserunt, sunt sit, ducimus tempore laudantium nostrum magnam et obcaecati, aperiam inventore hic itaque dicta quasi consectetur. Quo nulla, porro. <br>
+
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam tenetur deserunt, sunt sit, ducimus tempore laudantium nostrum magnam et obcaecati, aperiam inventore hic itaque dicta quasi consectetur. Quo nulla, porro. Lorem ipsum dolor sit amet.
+		</p>
+
+		<p>
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam tenetur deserunt, sunt sit, ducimus tempore laudantium nostrum magnam et obcaecati, aperiam inventore hic itaque dicta quasi consectetur. Quo nulla, porro. <br>
+
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam tenetur deserunt, sunt sit, ducimus tempore laudantium nostrum magnam et obcaecati, aperiam inventore hic itaque dicta quasi consectetur. Quo nulla, porro. Lorem ipsum dolor sit amet.
+		</p>
+
+		<p>
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam tenetur deserunt, sunt sit, ducimus tempore laudantium nostrum magnam et obcaecati, aperiam inventore hic itaque dicta quasi consectetur. Quo nulla, porro. <br>
+
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam tenetur deserunt, sunt sit, ducimus tempore laudantium nostrum magnam et obcaecati, aperiam inventore hic itaque dicta quasi consectetur. Quo nulla, porro. Lorem ipsum dolor sit amet.
+		</p>
+
+	</div>
+
+	<footer>
+		<p>Efecto parallax con Javascript</p>
+	</footer>
 </body>
 </html>
